--- a/twentyten-kai.css
+++ b/twentyten-kai.css
@@ -3,12 +3,12 @@
 
 #wrapper {
 	margin-bottom: 50px;
-	-webkit-box-shadow: rgba(0, 0, 0, 0.1) 0 5px 20px;
-	   -moz-box-shadow: rgba(0, 0, 0, 0.1) 0 5px 20px;
-	        box-shadow: rgba(0, 0, 0, 0.1) 0 5px 20px;
-	-webkit-border-radius: 3px;
-	   -moz-border-radius: 3px;
-	        border-radius: 3px;
+	-webkit-box-shadow: rgba(0, 0, 0, 0.1) 0 5px 25px;
+	   -moz-box-shadow: rgba(0, 0, 0, 0.1) 0 5px 25px;
+	        box-shadow: rgba(0, 0, 0, 0.1) 0 5px 25px;
+	-webkit-border-radius: 4px;
+	   -moz-border-radius: 4px;
+	        border-radius: 4px;
 }
 
 #access, #footer, #branding img {
@@ -68,6 +68,10 @@ code {
 	color: #784;
 	word-break: break-all;
 	word-wrap: break-word;
+}
+
+pre {
+	overflow: auto;
 }
 
 a:link {
